studentprofile updatedby hafsah

--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
           <a href="#">
             <img class="ms-3" src="img/profile.png" alt="profile"
           /></a>
-          <a href="#" class="text-decoration-none text-black">
+          <a href="studentprofile.html" class="text-decoration-none text-black">
             <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
           >
 
