--- a/alumniprofile.html
+++ b/alumniprofile.html
@@ -272,7 +272,7 @@
                 
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">An Automated Cloud-Based Digitized Management System for Rohingya Refugee Camp in Bangladesh</h4>
@@ -287,7 +287,7 @@
                 </div>
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -302,7 +302,7 @@
                 </div>
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
