--- a/paper.html
+++ b/paper.html
@@ -464,7 +464,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -480,7 +480,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -496,7 +496,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -512,7 +512,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -528,7 +528,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -544,7 +544,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -560,7 +560,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -576,7 +576,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="Paper_details.html"
+                  href="paper_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
