--- a/studentprofile.html
+++ b/studentprofile.html
@@ -291,7 +291,7 @@
 
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">An Automated Cloud-Based Digitized Management System for Rohingya Refugee Camp in Bangladesh</h4>
@@ -306,7 +306,7 @@
                 </div>
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -321,7 +321,7 @@
                 </div>
                 <div class="card-body bg-white">
                   <a
-                    href="Paper_details.html"
+                    href="paper_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
