ResearchApprove added-Alisha

--- a/New folder/facultyprofile_pending.html
+++ b/New folder/facultyprofile_pending.html
@@ -199,7 +199,7 @@
                     href="thesis_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded ">
-                      <h4 class="mb-2">My Thesis Name</h4>
+                      <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                       <div class="d-flex align-items-center text-black">
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Thesis Domain</h6>
@@ -216,7 +216,7 @@
                     href="thesis_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded ">
-                      <h4 class="mb-2">My Thesis Name</h4>
+                      <h4 class="mb-2">Machine learning: Trends, perspectives, and prospects</h4>
                       <div class="d-flex align-items-center text-black">
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Thesis Domain</h6>
@@ -233,7 +233,7 @@
                      href="thesis_details.html"
                      class="text-decoration-none text-black"
                      ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded ">
-                       <h4 class="mb-2">My Thesis Name</h4>
+                       <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                        <div class="d-flex align-items-center text-black">
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Thesis Domain</h6>
@@ -250,7 +250,7 @@
                      href="thesis_details.html"
                      class="text-decoration-none text-black"
                      ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded " >
-                       <h4 class="mb-2">My Thesis Name</h4>
+                       <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                         <div class="d-flex align-items-center text-black">
                           <p class="m-0 p-2">
                             <h6 class="d-inline-block">Thesis Domain</h6>
