--- a/New folder/thesis.html
+++ b/New folder/thesis.html
@@ -242,7 +242,7 @@
                   href="thesis_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                    <h4 class="mb-2">My Thesis Name</h4>
+                    <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                     <div class="d-flex align-items-center text-black">
                       <p class="m-0 p-2">
                         <h6 class="d-inline-block">Thesis Domain</h6>
@@ -259,7 +259,7 @@
                   href="thesis_details.html"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                    <h4 class="mb-2">My Thesis Name</h4>
+                    <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                     <div class="d-flex align-items-center text-black">
                       <p class="m-0 p-2">
                         <h6 class="d-inline-block">Thesis Domain</h6>
