--- a/FacultyReg.html
+++ b/FacultyReg.html
@@ -51,24 +51,74 @@ $('.input-daterange').datepicker({
 <body >
 
 <!-- navbar starts -->
-<nav class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-success">
-  <div class="container-fluid"> <a 	 href="signup.html">
-    <button 
-				class="navbar-toggler mb-3"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-				>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
-      <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
-    </svg>
-    </button>
-    </a> <a href="index.html"> <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
-        /></a> </div>
+<nav
+class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-success"
+>
+<div class="container-fluid">
+  <button
+    class="navbar-toggler mb-3"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a href="home.html">
+    <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
+  /></a>
+
+  <div
+    class="collapse navbar-collapse mx-5 fw-bold"
+    id="navbarSupportedContent"
+  >
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="home.html">Home</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="paper.html">Paper</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="fund.html"
+          >Funds</a
+        >
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="conferences.html">Conferences</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="faq.html">FAQs</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="forum.html">Forum</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a
+          class="nav-link active text-success fw-bolder"
+          aria-current="page"
+          href="contact.html"
+          >Contact</a
+        >
+      </li>
+    </ul>
+    <a href="#">
+      <img class="ms-3" src="img/profile.png" alt="profile"
+    /></a>
+    <a href="#" class="text-decoration-none text-black">
+      <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
+    >
+
+    <a href="#" class="text-decoration-none"
+      ><button type="button" class="btn btn-danger mx-3">
+        Log Out
+      </button></a
+    >
+  </div>
+</div>
 </nav>
 <div class="bg-light" >
   <div class="container" style="padding: 10px 10px 0px 0px;">
