--- a/New folder/pending.html
+++ b/New folder/pending.html
@@ -408,7 +408,7 @@
                      href="thesis_details_pending.html"
                      class="text-decoration-none text-black"
                      ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                       <h4 class="mb-2">My Thesis Name</h4>
+                       <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                        <div class=" text-black">
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Thesis Domain</h6>
@@ -430,7 +430,7 @@
                     href="thesis_details_pending.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                      <h4 class="mb-2">My Thesis Name</h4>
+                      <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                       <div class=" text-black">
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Thesis Domain</h6>
@@ -453,7 +453,7 @@
                      href="thesis_details_pending.html"
                      class="text-decoration-none text-black"
                      ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                       <h4 class="mb-2">My Thesis Name</h4>
+                       <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                        <div class=" text-black">
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Thesis Domain</h6>
@@ -478,7 +478,7 @@
                      href="thesis_details_pending.html"
                      class="text-decoration-none text-black"
                      ><div class="p-3 mt-2 mb-2 border border-2  border-info">
-                       <h4 class="mb-2">My Thesis Name</h4>
+                       <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                        <div class=" text-black">
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Thesis Domain</h6>
