--- a/New folder/studentprofile.html
+++ b/New folder/studentprofile.html
@@ -271,7 +271,7 @@
                     href="thesis_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded ">
-                      <h4 class="mb-2">My Thesis Name</h4>
+                      <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                       <div class="d-flex align-items-center text-black">
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Thesis Domain</h6>
@@ -288,7 +288,7 @@
                     href="thesis_details.html"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border  border-info border-2 rounded ">
-                      <h4 class="mb-2">My Thesis Name</h4>
+                      <h4 class="mb-2">Causability and explainability of artificial intelligence in medicine</h4>
                       <div class="d-flex align-items-center text-black">
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Thesis Domain</h6>
