added domain cards to home - adib

--- a/home.html
+++ b/home.html
@@ -270,74 +270,82 @@
 
       </div>
     </section>
-          <!-- <div class="card mb-2 border border-3  border-info">
-            <h5 class="card-header text-white bg-info">Others' Thesis</h5>
-            <div class="card-body bg-white">
-              <a
-                href="thesis_details.html"
-                class="text-decoration-none text-black"
-                ><div class="p-3 mt-2 mb-2 border border border-2  border-info">
-                  <h4 class="mb-3">Thesis Name</h4>
-                  <p class="m-0 p-2">
-                      <h6 class="d-inline-block">Thesis Domain</h6>
-                      | 2019-2020
-                    </p>
-                </div></a
-              >
-            </div>
-            <div class="card-body bg-white">
-             <a
-                href="thesis_details.html"
-                class="text-decoration-none text-black"
-                ><div class="p-3 mt-2 mb-2 border bg-white border border-2  border-info">
-                  <h4 class="mb-3">Thesis Name</h4>
-                  <p class="m-0 p-2">
-                      <h6 class="d-inline-block">Thesis Domain</h6>
-                      | 2019-2020
-                    </p>
-                </div></a
-              >
-            </div>
-            <div class="card-body bg-white">
-             <a
-                href="thesis_details.html"
-                class="text-decoration-none text-black"
-                ><div class="p-3 mt-2 mb-2 border bg-white border border-2  border-info">
-                  <h4 class="mb-3">Thesis Name</h4>
-                  <p class="m-0 p-2">
-                      <h6 class="d-inline-block">Thesis Domain</h6>
-                      | 2019-2020
-                    </p>
-                </div></a
-              >
-            </div>
-            <div class="card-body bg-white">
-             <a
-                href="thesis_details.html"
-                class="text-decoration-none text-black"
-                ><div class="p-3 mt-2 mb-2 border bg-white border border-2  border-info">
-                  <h4 class="mb-3">Thesis Name</h4>
-                  <p class="m-0 p-2">
-                      <h6 class="d-inline-block">Thesis Domain</h6>
-                      | 2019-2020
-                    </p>
-                </div></a
-              >
-            </div>
-            <div class="card-body bg-white">
-             <a
-                href="thesis_details.html"
-                class="text-decoration-none text-black"
-                ><div class="p-3 mt-2 mb-2 border border border-2  border-info">
-                  <h4 class="mb-3">Thesis Name</h4>
-                  <p class="m-0 p-2">
-                      <h6 class="d-inline-block">Thesis Domain</h6>
-                      | 2019-2020
-                    </p>
-                </div></a
-              >
-            </div>
-          </div> -->
+
+    <!-- domain cards -->
+    <section id="research-domains" class="research-domains">
+
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Research Domains</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-xl-4 my-4 ">
+            <a href="paper.html" class="text-decoration-none text-black ">
+              <div class="border-3 border border-success card mx-auto  rounded " style="width: 18rem">
+                <img src="img/AI.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;" />
+                <div class="card-body">
+                  <h5 class="card-title text-center">Artificial Intelligence</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-xl-4 my-4">
+            <a href="paper.htmll" class="text-decoration-none text-black">
+              <div class="border-3 border border-success card mx-auto rounded " style="width: 18rem">
+                <img src="img/ml.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;"/>
+                <div class="card-body">
+                  <h5 class="card-title text-center">Machine Learning</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-xl-4 my-4">
+            <a href="paper.html" class="text-decoration-none text-black">
+              <div class="border-3 border border-success card mx-auto rounded " style="width: 18rem">
+                <img src="img/ar.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;" />
+                <div class="card-body">
+                  <h5 class="card-title text-center">Augmented Reality</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-xl-4 my-4">
+            <a href="paper.html" class="text-decoration-none text-black">
+              <div class="border-3 border border-success card mx-auto rounded " style="width: 18rem">
+                <img src="img/cryptography.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;" />
+                <div class="card-body">
+                  <h5 class="card-title text-center">Cryptography</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-xl-4 my-4">
+            <a href="paper.html" class="text-decoration-none text-black">
+              <div class="border-3 border border-success card mx-auto rounded " style="width: 18rem">
+                <img src="img/robotics.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;" />
+                <div class="card-body">
+                  <h5 class="card-title text-center">Robotics</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-xl-4 my-4">
+            <a href="paper.html" class="text-decoration-none text-black">
+              <div class="border-3 border border-success card mx-auto rounded  rounded " style="width: 18rem">
+                <img src="img/networking.jpg" class="card-img-top" alt="..." style="width: 285px; height: 176px;" />
+                <div class="card-body">
+                  <h5 class="card-title text-center">Networking</h5>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- domain cards -->
+
         </div>
         <!-- LEFT BAR ends -->
         <!-- Right BAR -->
@@ -347,7 +355,7 @@
           <!-- <h5 class="card-header text-white bg-info ">Notice Board</h5> -->
 
           <h5 class="card-header text-white bg-info ">Upcoming Conferences</h5>
-          <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-info  ">
+          <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-success  ">
             <div class="nobottommargin p-3">
               
                 <!-- Notice Item-->
@@ -436,7 +444,7 @@
 
         <br><br>
         <h5 class="card-header text-white bg-info ">Notice Board</h5>
-        <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-info  ">
+        <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-success  ">
           <div class="nobottommargin p-3">
             
               <!-- Notice Item-->
