--- a/researchapproval.html
+++ b/researchapproval.html
@@ -25,7 +25,7 @@
     <!-- favicon link css  -->
     <link rel="shortcut icon" type="image/png" href="img/MIST.png" />
 
-    <title>Thesis List</title>
+    <title>Papers</title>
   </head>
   <body>
     <!-- navbar starts -->
