--- a/studentprofile.html
+++ b/studentprofile.html
@@ -287,52 +287,68 @@
            
             </div>
             <div class="card mb-5 border border-3 border-success  rounded ">
-                <h5 class="card-header text-white bg-success ">My Research Papers</h5>
+              
+                <div class="card-header text-white bg-success ">
+                  <div class="row">
+                    <div class="col-md-6  ">
+                   <h5>My Research Papers </h5>
+                  </div>
+                    <div class="col-sm-4 text-right " >
+                        <a href="researchPaperform.html" button type="button" class="btn btn-warning pull-right">Add New Research Paper</button> </a>
+                    </div>
+                </div>
 
-                <div class="card-body bg-white">
+                  </div>
+                <div class="card-body bg-white ">
                   <a
-                    href="paper_details.html"
+                    href="hesis_detailst.html"
                     class="text-decoration-none text-black"
-                    ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
-                      <h4 class="mb-3">An Automated Cloud-Based Digitized Management System for Rohingya Refugee Camp in Bangladesh</h4>
-                      <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                            Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                      </p>
-                    </div></a
-                  >
+                    ><div class="p-3 mt-2 mb-2 border  border-success border-2 rounded ">
+                      <h4 class="mb-2">Paper Name</h4>
+                      <div class="d-flex align-items-center text-black">
+                        <p class="m-0 p-2">
+                          <h6 class="d-inline-block">Paper Domain</h6>
+                          | 2019-2020
+                        </p>
+                        <a href="form.html" class="ms-auto inline-block btn btn-dark"
+                          >Edit <i class="fa fa-edit"></i
+                        ></a>
+                      </div></div
+                  ></a>
+                </div>
+                <div class="card-body bg-white ">
+                  <a
+                    href="hesis_detailst.html"
+                    class="text-decoration-none text-black"
+                    ><div class="p-3 mt-2 mb-2 border  border-success border-2 rounded ">
+                      <h4 class="mb-2">Paper Name</h4>
+                      <div class="d-flex align-items-center text-black">
+                        <p class="m-0 p-2">
+                          <h6 class="d-inline-block">Paper Domain</h6>
+                          | 2019-2020
+                        </p>
+                        <a href="form.html" class="ms-auto inline-block btn btn-dark"
+                          >Edit <i class="fa fa-edit"></i
+                        ></a>
+                      </div></div
+                  ></a>
                 </div>
                 <div class="card-body bg-white">
-                  <a
-                    href="paper_details.html"
+                   <a
+                    href="thesis_details.html"
                     class="text-decoration-none text-black"
-                    ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
-                      <h4 class="mb-3">Paper Title</h4>
-                      <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                            Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                      </p>
-                    </div></a
-                  >
-                </div>
-                <div class="card-body bg-white">
-                  <a
-                    href="paper_details.html"
-                    class="text-decoration-none text-black"
-                    ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
-                      <h4 class="mb-3">Paper Title</h4>
-                      <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                            Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                      </p>
-                    </div></a
-                  >
+                    ><div class="p-3 mt-2 mb-2 border  border-success border-2 rounded ">
+                      <h4 class="mb-2">Paper Name</h4>
+                      <div class="d-flex align-items-center text-black">
+                        <p class="m-0 p-2">
+                          <h6 class="d-inline-block">Paper Domain</h6>
+                          | 2019-2020
+                        </p>
+                        <a href="form.html" class="ms-auto inline-block btn btn-dark"
+                          >Edit <i class="fa fa-edit"></i
+                        ></a>
+                      </div></div
+                  ></a>
                 </div>
               </div>
 
