--- a/home.html
+++ b/home.html
@@ -354,7 +354,7 @@
         <div class="col-xxl-3 col-12 mb-5">
           <!-- <h5 class="card-header text-white bg-info ">Notice Board</h5> -->
 
-          <h5 class="card-header text-white bg-info ">Upcoming Conferences</h5>
+          <h5 class="card-header text-white bg-success">Upcoming Conferences</h5>
           <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-success  ">
             <div class="nobottommargin p-3">
               
@@ -443,7 +443,7 @@
         </div>
 
         <br><br>
-        <h5 class="card-header text-white bg-info ">Notice Board</h5>
+        <h5 class="card-header text-white bg-success ">Notice Board</h5>
         <div class="col_one_third nobottommargin col_last border bg-white border border-1  border-success  ">
           <div class="nobottommargin p-3">
             
