added request fund and linked - adib

--- a/paper_details.html
+++ b/paper_details.html
@@ -148,6 +148,10 @@
               <p>18-12-2021</p>
             </div>
 
+            <div class="info-card p-2 m-3">
+                <a class="btn btn-success" id="reqfund" type="button" href="request_fund.html">Request Fund</a>
+              </div>
+
           </div>
           <!-- left parts ends  -->
 
