added funds, request funds and linked - adib

--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
               <a class="nav-link" href="paper.html">Paper</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="fund.html"
+              <a class="nav-link" href="funds.html"
                 >Funds</a
               >
             </li>
