--- a/request_fund.html
+++ b/request_fund.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ARequest Fund Form</title>
+<title>Request Fund Form</title>
 
 <!-- BOOTSTRAP CSS -->
 <link
@@ -151,6 +151,15 @@ class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-succe
       </div>
 
     </form>
+
+    <br>
+
+    <div style="text-align: center;">
+        <a class="btn btn-success" id="submitfund" type="button" href="#" style="text-decoration: none;" onclick="">Submit</a>
+    </div>
+
+    
+
   </div>
 </div>
 
