--- a/main_home.html
+++ b/main_home.html
@@ -98,7 +98,7 @@
             </li>
           </ul>
 
-          <a href="#" class="text-decoration-none"
+          <a href="signup.html" class="text-decoration-none"
             ><button type="button" class="btn btn-success mx-3">
               Sign In/Sign Up
             </button></a
