Linking Problem Resolved -Rashid

--- a/main_home.html
+++ b/main_home.html
@@ -75,12 +75,12 @@
               <a class="nav-link active text-success fw-bolder" href="home.html">Home</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="#">Paper</a>
+              <a class="nav-link" href="paper.html">Paper</a>
             </li>
             <li class="nav-item mx-3">
               <a
                 class="nav-link "
-                href="fund.html"
+                href="funds.html"
                 >Funds</a
               >
             </li>
