--- a/paper_details.html
+++ b/paper_details.html
@@ -67,7 +67,7 @@
             
             <li class="nav-item mx-3">
               <a
-                class="nav-link mx-3"
+                class="nav-link active text-success fw-bolder"
                 href="paper.html"
                 >Paper</a
               >
@@ -90,10 +90,10 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-          <a href="#">
+          <a href="studentprofile.html">
             <img class="ms-3" src="img/profile.png" alt="profile"
           /></a>
-          <a href="#" class="text-decoration-none text-black">
+          <a href="studentprofile.html" class="text-decoration-none text-black">
             <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
           >
 
