--- a/FacultyReg.html
+++ b/FacultyReg.html
@@ -83,7 +83,7 @@ class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-succe
         <a class="nav-link" href="paper.html">Paper</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link" href="fund.html"
+        <a class="nav-link" href="funds.html"
           >Funds</a
         >
       </li>
@@ -98,21 +98,21 @@ class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-succe
       </li>
       <li class="nav-item mx-3">
         <a
-          class="nav-link active text-success fw-bolder"
-          aria-current="page"
+          class="nav-link "
+          
           href="contact.html"
           >Contact</a
         >
       </li>
     </ul>
-    <a href="#">
+    <a href="studentprofile.html">
       <img class="ms-3" src="img/profile.png" alt="profile"
     /></a>
     <a href="#" class="text-decoration-none text-black">
       <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
     >
 
-    <a href="#" class="text-decoration-none"
+    <a href="studentprofile.html" class="text-decoration-none"
       ><button type="button" class="btn btn-danger mx-3">
         Log Out
       </button></a
