--- a/facultyprofile.html
+++ b/facultyprofile.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="paper.html">Paper</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="fund.html"
+              <a class="nav-link" href="funds.html"
                 >Funds</a
               >
             </li>
@@ -74,10 +74,10 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-          <a href="#">
+          <a href="studentprofile.html">
             <img class="ms-3" src="img/rafisir.jpeg" style=" width:32px ; height:32px ;" alt="profile"
           /></a>
-          <a href="#" class="text-decoration-none text-black">
+          <a href="studentprofile.html" class="text-decoration-none text-black">
             <h6 class="mt-2 mx-3">Muhaimin Bin Munir</h6></a
           >
 
