--- a/faq.html
+++ b/faq.html
@@ -72,13 +72,13 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             
             <li class="nav-item mx-3">
-              <a class="nav-link" href="paper.html">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link" href="paper.html">Paper</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="fund.html"
+              <a class="nav-link" href="funds.html"
                 >Funds</a
               >
             </li>
@@ -100,14 +100,14 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-          <a href="#">
+          <a href="studentprofile.html">
             <img class="ms-3" src="img/profile.png" alt="profile"
           /></a>
-          <a href="#" class="text-decoration-none text-black">
+          <a href="studentprofile.html" class="text-decoration-none text-black">
             <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
           >
 
-          <a href="#" class="text-decoration-none"
+          <a href="studentprofile.html" class="text-decoration-none"
             ><button type="button" class="btn btn-danger mx-3">
               Log Out
             </button></a
