--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-          <a href="#">
+          <a href="studentprofile.html">
             <img class="ms-3" src="img/profile.png" alt="profile"
           /></a>
           <a href="studentprofile.html" class="text-decoration-none text-black">
