--- a/researchPaperform.html
+++ b/researchPaperform.html
@@ -64,10 +64,10 @@
             <a class="nav-link" href="home.html">Home</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="paper.html">Paper</a>
+            <a class="nav-link active text-success fw-bolder" href="paper.html">Paper</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="fund.html"
+            <a class="nav-link" href="funds.html"
               >Funds</a
             >
           </li>
@@ -84,10 +84,10 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <a href="#">
+        <a href="studentprofile.html">
           <img class="ms-3" src="img/profile.png" alt="profile"
         /></a>
-        <a href="#" class="text-decoration-none text-black">
+        <a href="studentprofile.html" class="text-decoration-none text-black">
           <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
         >
 
