--- a/signup.html
+++ b/signup.html
@@ -188,7 +188,7 @@
               <a class="nav-link" href="paper.html">Paper</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="fund.html"
+              <a class="nav-link" href="funds.html"
                 >Funds</a
               >
             </li>
@@ -203,8 +203,8 @@
             </li>
             <li class="nav-item mx-3">
               <a
-                class="nav-link active text-success fw-bolder"
-                aria-current="page"
+                class="nav-link "
+                
                 href="contact.html"
                 >Contact</a
               >
