VERY VERY IMPORTANT FIXES ON EVERY PAGES -adib
as well as added back to top button and placed navbar in seperate html file and fixed some titles - adib

--- a/researchapproval.html
+++ b/researchapproval.html
@@ -22,82 +22,35 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
 
+    <link
+    rel="stylesheet"
+    href="New folder/style1.css"
+    />
+
     <!-- favicon link css  -->
     <link rel="shortcut icon" type="image/png" href="img/MIST.png" />
+    <link href="assets/css/style.css" rel="stylesheet">
 
-    <title>Papers</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+    <title>Research Approvals</title>
   </head>
   <body>
     <!-- navbar starts -->
-    <nav
-    class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-success"
-  >
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler mb-3"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a href="home.html">
-        <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
-      /></a>
-
-      <div
-        class="collapse navbar-collapse mx-5 fw-bold"
-        id="navbarSupportedContent"
-      >
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
-          <li class="nav-item mx-3">
-            <a class="nav-link" href="home.html">Home</a>
-          </li>
-          <li class="nav-item mx-3">
-            <a class="nav-link active text-success fw-bolder" href="paper.html">Paper</a>
-          </li>
-          <li class="nav-item mx-3">
-            <a class="nav-link" href="funds.html"
-              >Funds</a
-            >
-          </li>
-          <li class="nav-item mx-3">
-            <a class="nav-link" href="conferences.html">Conferences</a>
-          </li>
-          <li class="nav-item mx-3">
-            <a class="nav-link" href="faq.html">FAQs</a>
-          </li>
-          <li class="nav-item mx-3">
-            <a class="nav-link" href="forum.html">Forum</a>
-          </li>
-          <li class="nav-item mx-3">
-            <a
-              class="nav-link "
-              
-              href="contact.html"
-              >Contact</a
-            >
-          </li>
-        </ul>
-        <a href="studentprofile.html">
-          <img class="ms-3" src="img/profile.png" alt="profile"
-        /></a>
-        <a href="studentprofile.html" class="text-decoration-none text-black">
-          <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
-        >
-
-        <a href="#" class="text-decoration-none"
-          ><button type="button" class="btn btn-danger mx-3">
-            Log Out
-          </button></a
-        >
-      </div>
-    </div>
-  </nav>
+    <div id="nav-placeholder"></div>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
     <!-- navbar ends -->
 
     <div class="bg-light">
@@ -546,6 +499,21 @@
 
       <!-- footer -->
     </div>
+
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-success btn-floating" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
