--- a/StudentReg.html
+++ b/StudentReg.html
@@ -14,12 +14,30 @@
       crossorigin="anonymous"
     />
 
-<!-- favicon link css  -->
-<link rel="shortcut icon" type="image/png" href="img/MIST.png" />
+    <link
+    rel="stylesheet"
+    href="New folder/style1.css"
+    />
+
+    <!-- favicon link css  -->
+    <link rel="shortcut icon" type="image/png" href="img/MIST.png" />
+    <link href="assets/css/style.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 <!-- Script --> 
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> 
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
 <script
   src="https://code.jquery.com/jquery-3.6.0.js"
@@ -45,81 +63,18 @@ $('.input-daterange').datepicker({
 	  
 	  </script> 
 
-<!-- Font -->
-<link href="http://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet">
+<link href="http://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet"> -->
+
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <body >
 
 <!-- navbar starts -->
-<nav
-class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-success"
->
-<div class="container-fluid">
-  <button
-    class="navbar-toggler mb-3"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a href="home.html">
-    <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
-  /></a>
+<div id="nav-placeholder"></div>
+<script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+<!-- navbar ends -->
 
-  <div
-    class="collapse navbar-collapse mx-5 fw-bold"
-    id="navbarSupportedContent"
-  >
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="paper.html">Paper</a>
-      </li>
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="funds.html"
-          >Funds</a
-        >
-      </li>
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="conferences.html">Conferences</a>
-      </li>
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="faq.html">FAQs</a>
-      </li>
-      <li class="nav-item mx-3">
-        <a class="nav-link" href="forum.html">Forum</a>
-      </li>
-      <li class="nav-item mx-3">
-        <a
-          class="nav-link "
-          
-          href="contact.html"
-          >Contact</a
-        >
-      </li>
-    </ul>
-    <a href="studentprofile.html">
-      <img class="ms-3" src="img/profile.png" alt="profile"
-    /></a>
-    <a href="studentprofile.html" class="text-decoration-none text-black">
-      <h6 class="mt-2 mx-3">Tanjim hossain</h6></a
-    >
-
-    <a href="#" class="text-decoration-none"
-      ><button type="button" class="btn btn-danger mx-3">
-        Log Out
-      </button></a
-    >
-  </div>
-</div>
-</nav>
 <div class="bg-light" >
   <div class="container" style="padding: 10px 10px 0px 0px;">
     <h2 style="text-align: left"><b>Student Registration Form:</b></h2>
@@ -320,9 +275,24 @@ class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-succe
   </div>
 </div>
 
+<!-- Back to top button -->
+<button type="button" class="btn btn-success btn-floating" id="btn-back-to-top">
+  <i class="fas fa-arrow-up"></i>
+</button>
+
+<script src="assets/vendor/purecounter/purecounter.js"></script>
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
+
 <!-- BOOTSTRAP JS --> 
 
-<script src="js/login.js"></script> 
+<!-- <script src="js/login.js"></script> 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script> 
 <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -352,6 +322,6 @@ class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-succe
         }
 
     });
-</script>
+</script> -->
 </body>
 </html>
