--- a/main_home.html
+++ b/main_home.html
@@ -42,70 +42,14 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <title>Home</title>
   </head>
   <body>
     <!-- navbar starts -->
-    <nav
-      class="navbar navbar-expand-xxl navbar-light border-bottom border-5 border-success"
-    >
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler mb-3"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a href="home.html">
-          <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
-        /></a>
-
-        <div
-          class="collapse navbar-collapse mx-5 fw-bold"
-          id="navbarSupportedContent"
-        >
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            
-            <li class="nav-item mx-3">
-              <a class="nav-link active text-success fw-bolder" href="home.html">Home</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="paper.html">Paper</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a
-                class="nav-link "
-                href="funds.html"
-                >Funds</a
-              >
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="#">Conferences</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="#">FAQs</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="#">Forum</a>
-            </li>
-            <li class="nav-item mx-3">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-
-          <a href="signup.html" class="text-decoration-none"
-            ><button type="button" class="btn btn-success mx-3">
-              Sign In/Sign Up
-            </button></a
-          >
-        </div>
-      </div>
-    </nav>
+    <div id="nav-placeholder"></div>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
     <!-- navbar ends -->
 
     <div class="container px-4 pt-5">
@@ -383,6 +327,12 @@
 
       <!-- footer -->
     </div>
+
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-success btn-floating" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
     <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
