correct navlink activates

--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>FAQs!</title>
+    <title>FAQs</title>
   </head>
   <body>
     <!-- navbar starts -->
