--- a/home.html
+++ b/home.html
@@ -373,7 +373,7 @@
                     </div>
                     <!--Notice Item End-->
                     <div class="col_half col_last tright nobottommargin mt-3">
-                    <a href="#">See All ⇒</a>
+                    <a href="#" class="text-success">See All ⇒</a>
                 </div>
             </div>
         </div>
@@ -462,7 +462,7 @@
                   </div>
                   <!--Notice Item End-->
                   <div class="col_half col_last tright nobottommargin mt-3">
-                  <a href="#">See All Notice ⇒</a>
+                  <a href="#" class="text-success">See All Notice ⇒</a>
               </div>
           </div>
       </div> 
