--- a/navbar.html
+++ b/navbar.html
@@ -32,7 +32,7 @@
               >
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="paper.html">Paper</a>
+              <a class="nav-link" href="paper.html">Papers</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link" href="funds.html"
@@ -68,3 +68,20 @@
       </div>
     </nav>
     <div style="margin-top: 7rem;"></div>
+    <script>
+      console.log('navbar loaded');
+
+      let navlinks = document.getElementsByClassName('nav-link');
+      for(let navlink_i=0;navlink_i<navlinks.length;navlink_i++){
+    if(navlinks[navlink_i].innerHTML=='Home'){
+      navlinks[navlink_i].classList.remove('active');
+      navlinks[navlink_i].classList.remove('text-success');
+      navlinks[navlink_i].classList.remove('fw-bolder');
+    }
+    if(navlinks[navlink_i].innerHTML==document.getElementsByTagName('title')[0].innerHTML){
+      navlinks[navlink_i].classList.add('active');
+      navlinks[navlink_i].classList.add('text-success');
+      navlinks[navlink_i].classList.add('fw-bolder');
+    }
+  }
+    </script>
