added admin dashboard, deleted extra fund page

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -44,30 +44,65 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Fund</title>
+    <title>Admin Dashboard</title>
   </head>
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
     <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
     <!-- navbar ends -->
-    <!-- <div class="bg-light"> -->
-      <!-- card section -->
-      <div class="container pt-5">
-        
-        <div class="mx-auto">
-          <img
-            class="d-block mx-auto w-75"
-            src="img/construction.jpg"
-            class="card-img-top"
-            alt="..."
-          />
 
-          <h1 class="text-center">THIS PAGE IS UNDER CONSTRUCTION</h1>
+    <section id="faq" class="faq section-bg" style="margin-top: -2rem;">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Control Panel</h2>
+          <p> ..</p>
         </div>
+
+        <ul class="faq-list" style="margin-top: -1.5rem;">
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Pending Users</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="researchapproval.html">Pending Papers</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Pending Funds</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Pending Questions</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Update User Status</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Add Conference Info</a>
+          </li>
+
+          <li>
+            <a style="text-decoration: none;" class="collapsed question" href="#">Donation Denial Complaint</a>
+          </li>
+
+          <!-- <li>
+            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+              </p>
+            </div>
+          </li> -->
+
+        </ul>
+
       </div>
-      <!-- card section -->
-    
+    </section>
 
       <!-- footer -->
       <!-- footer -->
