--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -67,7 +67,7 @@
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="researchapproval.html">Pending Papers</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_papers.html">Pending Papers</a>
           </li>
 
           <li>
