--- a/pending_papers.html
+++ b/pending_papers.html
@@ -45,7 +45,7 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Research Approvals</title>
+    <title>Pending Papers</title>
   </head>
   <body>
     <!-- navbar starts -->
